--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <main>
-    <h1 id="title">SlasK</h1>
-    <p id="message">The slask oh yeah</p>
+    <h1 id="title">God jul!</h1>
+    <p id="message">Och gott nytt år!</p>
   </main>
   <script src="js/Particle.js"></script>
   <script src="js/main.js"></script>
